# northgate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.platform.yml  docker-compose.soak.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/console/: index.html  package-lock.json  package.json  vite.config.ts
deploy/nginx/: gateway-subdomain.conf
deploy/prometheus/: northgate-alerts.yml
docs/: README.md  api-design.md  architecture-review.md  architecture.md  console.md  current-state.md  development.md  diagnostics-interface.md  integration-boundaries.md  integration-guide.md  known-issues.md  operator-cli-and-mcp.md  product-scope.md  roadmap.md  token-reservation.md
docs/decisions/: 0001-python-service-stack.md  README.md  (+2 more)
migrations/: env.py
scripts/: compose-backup.sh  compose-restore.sh  compose-upgrade.sh  mock_openai_provider.py  probe-application-connectivity.sh  provision-inspect-client.sh  run-compose-soak.sh  soak_requests.py  validate-compose-topology.sh
tests/: test_analytics.py  test_app.py  test_attempt_execution.py  test_config.py  test_control_pricing.py  test_control_routes.py  test_database.py  test_diagnostics.py  test_diagnostics_integration.py  test_inspect.py  test_mcp_server.py  test_metadata_trust.py  test_migrations.py  test_policy.py  test_pricing.py  test_proxy.py  test_proxy_settlement.py  test_route_health.py  test_routing.py  test_settlement_integration.py  test_stream_relay.py  test_streaming_integration.py  test_token_reservation.py  test_usage.py  test_verify.py
(+81 files in other folders)
